fix header buttons on mobile

--- a/app/assets/stylesheets/common/base/header.scss
+++ b/app/assets/stylesheets/common/base/header.scss
@@ -62,7 +62,7 @@
   }
 
   .login-button, button.sign-up-button {
-    /*float: left;*/
+    float: none;
     margin-top: 7px;
     padding: 6px 10px;
     .fa { margin-right: 3px; }
